tests/errors/test_14.xpp
// Incorrect parameters for function

fn foo() void {

}

fn main() void {
    foo();
    foo(21);
    foo(true, 21);
}